Make sure almost all z-index are relatively set based on the navbar z-index.

--- a/scss/partials/_activity_share.scss
+++ b/scss/partials/_activity_share.scss
@@ -7,7 +7,7 @@ div.activity-share-modal-container {
   top: 0px;
   right: 16px;
   background-color: $carrot_modal_bg;
-  z-index: 103;
+  z-index: 110;
   transition: opacity 180ms ease-in;
   width: 360px;
   background-color: white;
