--- a/scss/partials/_section_editor.scss
+++ b/scss/partials/_section_editor.scss
@@ -2,7 +2,7 @@ div.section-editor-container {
   background-color: $carrot_modal_bg;
   width: 100vw;
   height: 100vh;
-  z-index: #{$navbar_zindex + 186};
+  z-index: #{$navbar_zindex + 136};
   position: fixed;
   top: 0;
   left: 0;
